--- a/style.css
+++ b/style.css
@@ -182,3 +182,10 @@ body {
     overflow: visible;
     transition: all 1s;
 } */
+
+@media screen and (max-width: 610px) {
+  .contain {
+    flex-direction: column;
+    align-items: center;
+  }
+}
